# gwc_mapping_stem_outcomes

./: README.md  data_exploration.ipynb  pyproject.toml  requirements.txt
code/: config.yaml  data_cleaning_IR_report_card.R  data_exploration.ipynb  gen_econ_vars.py  s01_gen_econ_performance.py  s02_merging_datasets.py  s03_test.py  single_map.py  static_maps.py  test.ipynb
code/cleaning/: data_cleaning_IR_report_card.R
data/output/: clean_data.csv
data/output/20251201/: economic_characteristics.csv  economic_characteristics_clean.csv  gw_carver_school_data.csv  report_card_proficiency_scores.xlsx
data/output/20260109/: economic_characteristics.csv  merged_data.csv  merged_output.csv  report_card_proficiency_scores.csv  school_metadata.csv
data/raw_data/: dir_ed_entities.xls
data/shapefiles_geolocations/Neighborhoods_2012b_20251108/: geo_export_d6da9fc2-1417-41bc-96a9-e15b09615172.dbf
data_sources/: data_exploration.ipynb  dir_ed_entities.xls
data_sources/output/: report_card_proficiency_scores.xlsx
data_sources/raw_data/: Illinois-Student-Growth-2025-Cohort-vs-Baseline.xlsx  ~$Illinois-Student-Growth-2025-Cohort-vs-Baseline.xlsx
data_sources/shapefiles_geolocations/Boundaries - ZIP Codes_20251108/: geo_export_a5ffe9d6-b91f-4571-9247-a1295cf2f752.dbf
hacking/: config.yaml  s01_cleaning.py
