[project]
name = "gw-carver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "fastexcel>=0.16.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyyaml>=6.0.0",
    "xlrd>=2.0.2",
]
